# course_work_3

./: README.md  pyproject.toml
scr/: main.py  test.py  utils.py
tests/: test_main.py  test_utils.py
