[tool.poetry]
name = "course_work_3"
version = "0.1.0"
description = ""
authors = ["djkeysi <evgeniyzenchenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
